--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,19 +1,3 @@
-/* Reset some default browser styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
-    margin: 0;
-    padding: 0;
-  }
-  
   .container {
     width: 90%;
     max-width: 1200px;
@@ -21,7 +5,6 @@
     padding: 20px;
   }
   
-  /* Utility classes */
   .text-center {
     text-align: center;
   }
@@ -71,7 +54,6 @@
     margin-top: 10px;
   }
   
-  /* Navbar styles */
   .navbar {
     background-color: #333;
     color: white;
@@ -100,10 +82,10 @@
   /* Signin/Signup Page styles */
   .auth-container {
     background-color: white;
-    padding: 40px;
+    padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    max-width: 60px;
     margin: 50px auto;
   }
   
@@ -133,6 +115,44 @@
   .pagination button {
     margin: 0 5px;
   }
+
+.home-container {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.home-container h1 {
+  font-size: 27px;
+  margin-bottom: 20px;
+  color: #cd0909;
+}
+
+.home-container p {
+  font-size: 1.2rem;
+  margin-bottom: 30px;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: center;
+}
+
+.btn {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  margin: 0 10px;
+  transition: background-color 0.3s;
+}
+
+.btn:hover {
+  background-color: #0056b3;
+}
+
   
   /* Responsive styles */
   @media (max-width: 768px) {
@@ -178,4 +198,24 @@
       margin: 5px 0;
     }
   }
+
+  @media (max-width: 1200px) {
+    .container {
+      width: 95%;
+    }
+  
+    .auth-container {
+      margin: 20px auto;
+    }
+  
+    .home {
+      padding: 20px;
+    }
+  
+    form {
+      gap: 15px;
+    }
+  }
+  
+
   
